# contest-demo

./: CMakeLists.txt  main.c
header/: mylist.h  participant.h  service.h
src/: mylist.c  participant.c  service.c
